[package]
name = "remindneko"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.34"
clap = { version = "4.5.1", features = ["derive"] }
once_cell = "1.19.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
humantime = "2.0"
colored = "2.1.0"
colored_json = "5.0.0"
